--- a/2nd-semester.html
+++ b/2nd-semester.html
@@ -1,60 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="style.css">
-  	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-		<title>2nd semester MMD</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<title>2nd semester MMD</title>
 </head>
 
 <body>
 
-<a href="curriculum_in.html" class="page-navigation-arrow">&#10094;</a>
-<div class="page-navigation">
-<a href="curriculum_in.html" class="mainpage-title">MMD Curriclum</a>
-<a href="curriculum_in.html#slideshow" class="semester-title"><br>2nd semester</a>
-</div>
+	<a href="curriculum_in.html" class="page-navigation-arrow">&#10094;</a>
+	<div class="page-navigation">
+		<a href="curriculum_in.html" class="mainpage-title">MMD Curriclum</a>
+		<a href="curriculum_in.html#slideshow" class="semester-title"><br>2nd semester</a>
+	</div>
 
 	<div class="panels">
-    <div class="panel panel1" onclick="hidePanelText();">
-     <div class="panel-box"><p class="numbers">1</p>
-	    <p class="category-menu">Skills</p>
-	    <p class="more-button">+</p>	</div>
-			<p class="panel-text paneltext-1 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
-    </div>
-    <div class="panel panel2" onclick="hidePanelText2();">
-     	<div class="panel-box"><p class="numbers">2</p>
-	    <p class="category-menu">Knowledge</p>
-	    <p class="more-button">+</p>	</div>
-			<p class="panel-text paneltext-2 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
-    </div>
-    <div class="panel panel3" onclick="hidePanelText3();">
-      <div class="panel-box"><p class="numbers">3</p>
-	    <p class="category-menu">Competences</p>
-	    <p class="more-button">+</p>	</div>
-			<p class="panel-text paneltext-3 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
-    </div>
-    <div class="panel panel4" onclick="hidePanelText4();">
-     <div class="panel-box"><p class="numbers">4</p>
-	    <p class="category-menu">Digital UI 2 </p>
-	    <p class="more-button">+</p>	</div>
-			<p class="panel-text paneltext-4 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
-    </div>
-    <div class="panel panel5" onclick="hidePanelText5();">
-      <div class="panel-box"><p class="numbers">5</p>
-	    <p class="category-menu">Digital Content 2 </p>
-	    <p class="more-button">+</p>	</div>
-			<p class="panel-text paneltext-5 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
-    </div>
-		 <div class="panel panel6" onclick="hidePanelText6();">
-      <div class="panel-box"><p class="numbers">6</p>
-	    <p class="category-menu">Exam</p>
-	    <p class="more-button">+</p>	</div>
-			 <p class="panel-text paneltext-6 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
-    </div>
-  </div>
+		<div class="panel panel1" onclick="hidePanelText();">
+			<div class="panel-box">
+				<p class="numbers">1</p>
+				<p class="category-menu">Skills</p>
+				<p class="more-button">+</p>
+			</div>
+			<p class="panel-text paneltext-1 hide"></p>
+		</div>
+		<div class="panel panel2" onclick="hidePanelText2();">
+			<div class="panel-box">
+				<p class="numbers">2</p>
+				<p class="category-menu">Knowledge</p>
+				<p class="more-button">+</p>
+			</div>
+			<p class="panel-text paneltext-2 hide"></p>
+		</div>
+		<div class="panel panel3" onclick="hidePanelText3();">
+			<div class="panel-box">
+				<p class="numbers">3</p>
+				<p class="category-menu">Competences</p>
+				<p class="more-button">+</p>
+			</div>
+			<p class="panel-text paneltext-3 hide"></p>
+		</div>
+		<div class="panel panel4" onclick="hidePanelText4();">
+			<div class="panel-box">
+				<p class="numbers">4</p>
+				<p class="category-menu">Digital UI 2 </p>
+				<p class="more-button">+</p>
+			</div>
+			<p class="panel-text paneltext-4 hide"></p>
+		</div>
+		<div class="panel panel5" onclick="hidePanelText5();">
+			<div class="panel-box">
+				<p class="numbers">5</p>
+				<p class="category-menu">Digital Content 2 </p>
+				<p class="more-button">+</p>
+			</div>
+			<p class="panel-text paneltext-5 hide"></p>
+		</div>
+		<div class="panel panel6" onclick="hidePanelText6();">
+			<div class="panel-box">
+				<p class="numbers">6</p>
+				<p class="category-menu">Exam</p>
+				<p class="more-button">+</p>
+			</div>
+			<p class="panel-text paneltext-6 hide"></p>
+		</div>
+	</div>
+	<script type="text/javascript">
 
-<script src="script.js"></script>
+	window.addEventListener("load", ()=>{
+	  fetch("datadata.json").then(res=>res.json()).then(addText)
+	})
+
+	function addText(e){
+	  document.querySelector('.paneltext-1').innerHTML=e.uiskills2;
+
+	  document.querySelector('.paneltext-2').innerHTML=e.uiknowledge2;
+	  document.querySelector('.paneltext-3').innerHTML=e.uicompetencies2;
+	  document.querySelector('.paneltext-4').innerHTML=e.contentskills2;
+	  document.querySelector('.paneltext-5').innerHTML=e.contentknowledge2;
+	  document.querySelector('.paneltext-6').innerHTML=e.contentcompetencies2;
+
+
+	}
+
+	</script>
+	<script src="script.js"></script>
 </body>
+
 </html>
